# TRS

./: README.md  pyproject.toml
ARES/: Globals.py  Lib.py  LibPeakCaller.py  MergedPeakCaller.py  __init__.py
ARES/DAL/BAM/: BamReader.py  __init__.py
ARES/DAL/Track/: ChrCounts.py
TRS/: Lib.py  LibPeakCaller.py  MergedPeakCaller.py  __init__.py
TRS/DAL/BAM/: BamReader.py  __init__.py
TRS/DAL/Track/: ChrCounts.py  Counts.py  Coverage.py  __init__.py
demo_example/: scheme.yaml
demo_example/expected_results/: all_mean_peaks.csv  significant_peaks.csv
