[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TRSalgorithm"
version = "0.0.3"
authors = [
  { name="Amir Bar", email="amir.bar@mail.huji.ac.il" },
]
readme = "README.md"
description = "Determining 3' termini of transcripts from RNAtag-seq data in bacteria"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

dependencies = [
  "scipy",
  "numpy",
  "pysam",
  "pandas",
  "intervaltree",
  "statsmodels",
  "pyaml"
]

[project.scripts]
TRSpeaks = "TRS:main"

[project.urls]
"Homepage" = "https://github.com/amirbarHUJI/TRS"
"Bug Tracker" = "https://github.com/amirbarHUJI/TRS/issues"
