[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TRSalgorithm"
version = "0.0.1"
authors = [
  { name="Amir Bar", email="amir.bar@mail.huji.ac.il" },
]
readme = "README.md"
description = "Determining 3' termini of transcripts from RNAtag-seq data in bacteria"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

dependencies = [
  "scipy>=1.7.3",
  "numpy>=1.21.6",
  "pysam>=0.20.0",
  "pandas>=1.3.5",
  "statsmodels>=0.13.5",
  "pyaml",
  "intervaltree",
]

[project.scripts]
TRSpeaks = "TRS:main"

[project.urls]
"Homepage" = "https://github.com/amirbarHUJI/TRS"
"Bug Tracker" = "https://github.com/amirbarHUJI/TRS/issues"
